src/test/deca/etape_A/valid/primary_expr.deca
// Description :
//   test pour la règle du primary_expr

// Résultats :
//   Ok

{
readint();
readfloat();
}