src/test/deca/etape_A/invalid/inst.deca
// Description :
//  test pour instruction

// Résultats :
//  Erreur syntaxique
//  Ligne 9 : missing ')' at ';'

{
print(;
}
